Enable parallel builds when the PROCESSORS env var is set

--- a/src/Makefile.common.in
+++ b/src/Makefile.common.in
@@ -3,7 +3,11 @@ CC = @CC@
 FPIC = @FPIC@
 PWD = $(shell pwd)
 
-GNATMAKE = gnatmake
+ifeq ($(PROCESSORS),)
+PROCESSORS=1
+endif
+
+GNATMAKE = gnatmake -j${PROCESSORS}
 OS_SPECIFIC_LINK_OPTIONS = @OS_SPECIFIC_LINK_OPTIONS@
 BUILD_STATIC = @BUILD_STATIC@
 BUILD_SHARED = @BUILD_SHARED@
