--- a/src/Makefile.common.in
+++ b/src/Makefile.common.in
@@ -17,7 +17,7 @@ SO_OPTS  = @SO_OPTS@
 MAJOR    = @GTKADA_MAJOR_VERSION@
 MINOR    = @GTKADA_MINOR_VERSION@
 MICRO    = @GTKADA_MICRO_VERSION@
-GTK_LIBS = @GTK_LIBS@
+GTK_LIBS = @GTK_LIBS_FOR_GNATMAKE@
 HAVE_OPENGL   = @HAVE_OPENGL@
 HAVE_GTKEXTRA = @HAVE_GTKEXTRA@
 BUILD_TYPE      = @BUILD_TYPE@
