GtkAda now needs to present -lgmodule in its link flags now that the linker is not able to add it when it is in the LD_LIBRARY_PATH, as discussed in L628-036

--- a/projects/gtkada_install_dynamic.gpr.in
+++ b/projects/gtkada_install_dynamic.gpr.in
@@ -54,6 +54,7 @@ project GtkAda_Install_Dynamic is
         "-lgobject-2.0",
         "-lgmodule-2.0",
         "-lgthread-2.0",
+	"-lgmodule-2.0",
         "-lglib-2.0",
         "-lintl",
         "-liconv",
