--- a/Makefile.in
+++ b/Makefile.in
@@ -46,6 +46,7 @@ generate: force
 		--gir-file=contrib/Gtk-3.0.gir \
 		--gir-file=contrib/Gdk-3.0.gir \
 		--gir-file=contrib/Pango-1.0.gir \
+		--gir-file=contrib/Gio-2.0.gir \
 		--xml-file=contrib/binding.xml \
 		--ada-output=src/generated/tmp.ada \
 		--c-output=src/misc_generated.c
