--- a/projects/gtkada_install_dynamic.gpr.in
+++ b/projects/gtkada_install_dynamic.gpr.in
@@ -39,12 +39,12 @@ project GtkAda_Install_Dynamic is
    for Library_Name use "gtkada-@GTKADA_MAJOR_VERSION@.@GTKADA_MINOR_VERSION@";
    for Library_Options use ("-L.", "-L../../bin", "-L../../lib",
         "-lgtkada_c",
-        "-lgtk-win32-2.0",
-        "-lgdk-win32-2.0",
+        "-lgtk-3",
+        "-lgdk-3",
         "-latk-1.0",
         "-lgdk_pixbuf-2.0",
-        "-ljpeg",
-        "-lpng",
+        "-ljpeg6b",
+        "-lpng-3",
         "-lpangocairo-1.0",
         "-lgio-2.0",
         "-lcairo",
