Install CSS files, now being tested by testgtk. For LB28-024.

--- a/testgtk/Makefile.in
+++ b/testgtk/Makefile.in
@@ -52,7 +52,7 @@ install: force
 	$(RM) b~*
 	-$(INSTALL_PROGRAM) testgtk$(EXEEXT) "${DESTDIR}$(examples)"
 	-$(INSTALL_PROGRAM) testcairo$(EXEEXT) "${DESTDIR}$(examples)"
-	$(CP) *.ad? *.xpm *.png *.jpg *.gif *.lwo *.xml "${DESTDIR}$(examples)"
+	$(CP) *.ad? *.xpm *.png *.jpg *.gif *.lwo *.xml *.css "${DESTDIR}$(examples)"
 	$(CP) opengl/*.ad? opengl/*.[ch] "${DESTDIR}$(examples)/opengl"
 
 clean: module_clean
