--- a/projects/gtkada_install_dynamic.gpr.in
+++ b/projects/gtkada_install_dynamic.gpr.in
@@ -43,7 +43,7 @@ project GtkAda_Install_Dynamic is
         "-lgdk-3",
         "-latk-1.0",
         "-lgdk_pixbuf-2.0",
-        "-ljpeg6b",
+        "-ljpeg",
         "-lpng-3",
         "-lpangocairo-1.0",
         "-lgio-2.0",
