--- a/Makefile.in
+++ b/Makefile.in
@@ -25,7 +25,7 @@ install:
 	$(MAKE) -C $(projects_dir) install
 	$(MAKE) -C $(testgtk_dir) install
 	$(MAKE) -C $(doc_dir) install
-	$(MAKE) -C $(example_dir) install
+	#$(MAKE) -C $(example_dir) install
 	$(MAKE) -C $(xml_dir) install
 	@echo '------------------------------------------------------------------'
 	@echo '--  GtkAda has now been installed.                              --'
