Do not set DESTDIR.  It should have no impact to set it to an empty value, since a command line  value should override that default. Nonetheless, GNU make documentation  recommends that this value not be set. From the gtkada mailing list

--- a/src/Makefile.common.in
+++ b/src/Makefile.common.in
@@ -46,8 +46,9 @@ RANLIB = @RANLIB@
 
 # DESTDIR may be set to the path to a staging directory to install files in
 # when building packages. If DESTDIR is empty, files will be installed directly
-# in their final locations.
-DESTDIR =
+# in their final locations. GNU make documentation recommends that this variable
+# not be set in the Makefile
+#    DESTDIR =
 
 prefix        = @prefix@
 exec_prefix   = @exec_prefix@
