--- a/Makefile.in
+++ b/Makefile.in
@@ -147,7 +147,7 @@ endif
 
 	@# install testgtk
 	-${INSTALL_PROGRAM} testgtk/testgtk${EXEEXT} ${exampledir}
-	${CP} testgtk/*.ad? testgtk/*.xpm testgtk/*.png testgtk/*.gif testgtk/*.lwo testgtk/*.xml testgtk/*.css ${exampledir}
+	${CP} testgtk/*.ad? testgtk/*.xpm testgtk/*.png testgtk/*.gif testgtk/*.lwo testgtk/*.xml testgtk/*.css testgtk/*.ui ${exampledir}
 
 	$(MAKE) -C $(projects_dir) install
 	$(MAKE) -C $(doc_dir) install
