--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 src/generated/*                           no-precommit-check
 src/misc_generated.c                      no-precommit-check
+
+# Too much work to clean up
+contrib/binding.py                        no-precommit-check
+
