Fix generation of the RM
Create the object directory, needed to pre-compile the Xref.
Rename the project, since the name appears in the generated doc.

For O122-071.

--- a/docs/gtkada_rm/Makefile.in
+++ b/docs/gtkada_rm/Makefile.in
@@ -13,7 +13,8 @@ gtkada_rm: docgen docgen_clean
 
 docgen:
 	$(MKDIR) gtkada_rm
-	gnatdoc -Pgenerate_docs.gpr --enable-build
+	$(MKDIR) doc_obj
+	gnatdoc -Pgtkada_documentation.gpr --enable-build
 
 docgen_clean:
 	$(RM) -rf doc_obj/*
