--- a/shared.gpr.in
+++ b/shared.gpr.in
@@ -21,6 +21,8 @@
 --                                                                          --
 ------------------------------------------------------------------------------
 
+with "gtk";
+
 project Shared is
 
    type Build_Type is ("Debug", "Production");
@@ -40,12 +42,12 @@ project Shared is
    type Library_Kinds is ("relocatable", "static");
    Library_Kind : Library_Kinds := external ("LIBRARY_TYPE", "@DEFAULT_LIBRARY_TYPE@");
 
-   So_Ext := "@SO_EXT@";
-   Version := "@PACKAGE_VERSION@";
-   Gtk_Include := (@GTK_CFLAGS_GPR@);
-   Gtk_Libs    := (@GTK_LIBS_GPR@);
-   GL_Include  := (@GL_CFLAGS_GPR@);
-   GL_Libs     := (@GL_LIBS_GPR@);
+   So_Ext      := "@SO_EXT@";
+   Version     := "@PACKAGE_VERSION@";
+   Gtk_Include := Gtk.Gtk_Default_Include & (@GTK_CFLAGS_GPR@);
+   Gtk_Libs    := Gtk.Gtk_Default_Libs    & (@GTK_LIBS_GPR@);
+   GL_Include  := Gtk.GL_Default_Include  & (@GL_CFLAGS_GPR@);
+   GL_Libs     := Gtk.GL_Default_Libs     & (@GL_LIBS_GPR@);
 
    package Naming is
       for Body_Suffix ("Objective-C") use ".m";
