--- a/Makefile.in
+++ b/Makefile.in
@@ -44,13 +44,18 @@ exampledir=${DESTDIR}${prefix}/share/examples/gtkada/testgtk
 all:
 
 ifeq (${BUILD_STATIC}, yes)
-all: static
+all tools tests: static
 install: install/static
 endif
 
 ifeq (${BUILD_SHARED},yes)
-all: relocatable
+all tools tests: relocatable
 install: install/relocatable
+LIBRARY_TYPE_FOR_TOOLS=relocatable
+endif
+
+ifeq (${BUILD_STATIC}, yes)
+LIBRARY_TYPE_FOR_TOOLS=static
 endif
 
 all: tools tests
@@ -59,7 +64,7 @@ relocatable: build_library_type/relocatable
 
 tools:
 	@echo "====== Building tools ====="
-	${GPRBUILD_FULL} -XLIBRARY_TYPE=static -Psrc/tools/tools.gpr
+	${GPRBUILD_FULL} -XLIBRARY_TYPE=$(LIBRARY_TYPE_FOR_TOOLS) -Psrc/tools/tools.gpr
 
 build_library_type/%:  src/gtkada-intl.adb
 	@echo "====== Building $(@F) libraries ====="
@@ -74,9 +79,9 @@ src/gtkada-intl.adb: src/gtkada-intl.gpb Makefile
 testgtk/opengl/view_gl.adb: testgtk/opengl/view_gl.gpb Makefile
 	gnatprep -r -c -DHAVE_GL=${HAVE_OPENGL} -DWIN32=False testgtk/opengl/view_gl.gpb $@
 
-tests: testgtk/opengl/view_gl.adb static
+tests: testgtk/opengl/view_gl.adb
 	@echo "====== Building tests ====="
-	cd testgtk; ${GPRBUILD_FULL} -XLIBRARY_TYPE=static -Ptestgtk.gpr -aP ../src
+	cd testgtk; ${GPRBUILD_FULL} -XLIBRARY_TYPE=$(LIBRARY_TYPE_FOR_TOOLS) -Ptestgtk.gpr -aP ../src
 
 install/%: force
 	${GPRINSTALL_FULL} -XLIBRARY_TYPE=$(@F) --build-name=$(@F) \
@@ -97,9 +102,9 @@ ifneq (,$(wildcard $(prefix)/lib/gnat/manifests/gtkada))
 endif
 
 install: install-clean
-	${GPRINSTALL_FULL} -XLIBRARY_TYPE=static \
+	${GPRINSTALL_FULL} -XLIBRARY_TYPE=$(LIBRARY_TYPE_FOR_TOOLS) \
 		--mode=usage -Psrc/tools/tools.gpr
-	cd testgtk; ${GPRINSTALL_FULL} -XLIBRARY_TYPE=static \
+	cd testgtk; ${GPRINSTALL_FULL} -XLIBRARY_TYPE=$(LIBRARY_TYPE_FOR_TOOLS) \
 		--mode=usage --exec-subdir=${exampledir} \
 		-Ptestgtk.gpr -aP ../src
 
