--- a/Makefile.in
+++ b/Makefile.in
@@ -25,7 +25,8 @@ PRJDIR=lib/gnat
 
 GPRBUILD_FULL = ${GPRBUILD} -j${PROCESSORS} -m -p
 GPRINSTALL_FULL = ${GPRINSTALL} -p -f --project-subdir=$(PRJDIR) \
-	--build-var=LIBRARY_TYPE --install-name=gtkada --prefix=${DESTDIR}$(prefix)
+	--build-var=LIBRARY_TYPE --install-name=gtkada --prefix=${DESTDIR}$(prefix) \
+	-XGTK_PREFIX=${prefix}
 
 GETTEXT_INTL=@GETTEXT_INTL@
 HAVE_GETTEXT=@HAVE_GETTEXT@
