Removed, since gtkada-config no longer exists
Add GPRBUILD_OPTIONS and GPRINSTALL_OPTIONS variables in the Makefile,
so that users and tools can pass extra arguments to gprbuild and
gprinstall.

Remove Processors variable in .gpr files, since this is better handled
at the level of the Makefile.

Remove some more files with "make clean"

(misc.c): do not include glib-object.h, not needed

Suggested on the gtkada mailing list, email from Nicolas Boulenguez,
"various patches"

Change-Id: Ic2c0951c85f9069062f83f580bc0d550fac7c929

--- a/Makefile.in
+++ b/Makefile.in
@@ -8,13 +8,16 @@ SHELL=/bin/sh
 doc_dir = docs
 PYTHON  = python
 
+GPRBUILD_OPTIONS=
+GPRINSTALL_OPTIONS=
+
 TARGET=@TARGET@
 ifeq ($(TARGET),)
-GPRBUILD=@GPRBUILD@
-GPRINSTALL=@GPRINSTALL@
+GPRBUILD=@GPRBUILD@ $(GPRBUILD_OPTIONS)
+GPRINSTALL=@GPRINSTALL@ $(GPRINSTALL_OPTIONS)
 else
-GPRBUILD=@GPRBUILD@ --target=${TARGET}
-GPRINSTALL=@GPRINSTALL@ --target=${TARGET}
+GPRBUILD=@GPRBUILD@ --target=${TARGET} $(GPRBUILD_OPTIONS)
+GPRINSTALL=@GPRINSTALL@ --target=${TARGET} $(GPRINSTALL_OPTIONS)
 endif
 
 # Number of parallel compilation
@@ -141,8 +144,8 @@ clean-generic:
 	-${RM} .\#*
 
 mostlyclean-generic: clean-generic
-	-${RM} Makefile
-	-${RM} testgtk/Makefile
+	-${RM} Makefile src/config.h shared.gpr
+	-${RM} testgtk/opengl/view_gl.adb
 
 clean/%: force
 	-gprclean -r -q -XLIBRARY_TYPE=$(@F) -Psrc/tools/tools.gpr
@@ -151,7 +154,7 @@ clean/%: force
 
 clean: clean-generic clean/static clean/relocatable
 
-distclean: mostlyclean-generic
+distclean: clean mostlyclean-generic
 	-${RM} config.cache config.log config.status
 	-$(MAKE) -C $(doc_dir) distclean
 	-$(MAKE) -C po distclean
