Various cleanups in the project files
Doing a "make clean" resulted in warnings because we had duplicate
gtkada.gpr files

Change-Id: I3fdb73fbc42447d67d4f8f61575ba2b4fb5b1ebe

--- a/Makefile.in
+++ b/Makefile.in
@@ -151,6 +151,7 @@ clean/%: force
 	-gprclean -r -q -XLIBRARY_TYPE=$(@F) -Psrc/tools/tools.gpr
 	-gprclean -r -q -XLIBRARY_TYPE=$(@F) -Psrc/opengl/gtkada_gl.gpr
 	-gprclean -r -q -XLIBRARY_TYPE=$(@F) -Ptestgtk/testgtk.gpr
+	-gprclean -r -q -XLIBRARY_TYPE=$(@F) -Psrc/gtkada.gpr
 
 clean: clean-generic clean/static clean/relocatable
 
