N922-029 Add version number to title of HTML documentation.
Change-Id: If8799507bef945f8ec0406b9953dae46988f306f

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ testgtk/testcairo
 testgtk/application
 testgtk/try.png
 docs/gtkada_rm/gtkada_rm/
+docs/gtkada_rm/html/static/index.html
 docs/gtkada_ug/gtkada_ug.html
 docs/gtkada_ug/gtkada_ug.info
 docs/gtkada_ug/gtkada_ug.ps
