--- a/configure.in
+++ b/configure.in
@@ -36,7 +36,7 @@ AM_CHECK_OPENGL
 
 libdir='${prefix}/lib'
 
-AC_OUTPUT(Makefile shared.gpr po/Makefile)
+AC_OUTPUT(Makefile shared.gpr po/Makefile docs/gtkada_rm/html/static/index.html)
 
 AC_MSG_NOTICE([--------- Summary for Gtkada $PACKAGE_VERSION -----------------])
 AC_MSG_NOTICE(AC_HELP_STRING(
