Enable warnings in production mode
The only difference with Debug mode is that they should not be considered
as errors.
This will allow detecting such errors earlier

Change-Id: I7a5a402c89acb3b488824c2eaa5e8f1744be4cf7

--- a/shared.gpr.in
+++ b/shared.gpr.in
@@ -63,7 +63,7 @@ project Shared is
              for Switches ("C") use ("-g", "-O0");
          when "Production" =>
              for Switches ("Ada") use
-                ("-gnat05", "-gnatQ", "-O2", "-gnatn", "-gnatws",
+                ("-gnat05", "-gnatQ", "-O2", "-gnatn", "-gnatwa", "-gnaty",
                  "-Werror=format-security");
              for Switches ("C") use ("-O2");
       end case;
