PB02-019 (3/3) Correcting for Documentation_Dir attribute
Change-Id: I74220e834bef7f1f25d88bb005de7feb501626bd

--- a/shared.gpr.in
+++ b/shared.gpr.in
@@ -94,7 +94,10 @@ project Shared is
 
    package IDE is
       for VCS_Kind use "auto";
-      for Documentation_Dir use "html";
    end IDE;
+
+   package Documentation is
+      for Documentation_Dir use "html";
+   end Documentation;
 
 end Shared;
