Fix generation of Gdk_Event_Record data structure with gtk 3.22
Hide warnings by default, to keep output clearer

P920-039

Change-Id: Id12a3a7454b23ba0bd889e3356db1190111f6de3

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,5 @@ src/misc_generated.c                      no-precommit-check
 
 # Too much work to clean up
 contrib/binding.py                        no-precommit-check
+contrib/adaformat.py                      no-precommit-check
 
