--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT(gtkada,18.0w,report@adacore.com,gtkada)
+AC_INIT(gtkada,17.0gpl,report@adacore.com,gtkada)
 AC_CANONICAL_SYSTEM
 
 TARGET=""
