Use -fPIC for C
Needed for linking under some versions of Linux.
Reported under #10


Change-Id: I0594552b1f089104cd79f07c6902ade6209e5d9b

--- a/shared.gpr.in
+++ b/shared.gpr.in
@@ -54,6 +54,7 @@ project Shared is
       for Driver ("Objective-C") use "@OBJC@";
       for Leading_Required_Switches ("Objective-C") use ("-c");
       for PIC_Option ("Objective-C") use ("-fPIC");
+      for PIC_Option ("C") use ("-fPIC");
 
       case Build is
          when "Debug" =>
