--- a/Makefile.in
+++ b/Makefile.in
@@ -30,8 +30,8 @@ PRJDIR=lib/gnat
 
 GPRBUILD_FULL = ${GPRBUILD} -j${PROCESSORS} -m -p ${GPRBUILD_SWITCHES}
 GPRINSTALL_FULL = ${GPRINSTALL} -p -f --project-subdir=$(PRJDIR) \
-	--build-var=LIBRARY_TYPE --install-name=gtkada --prefix=${DESTDIR}$(prefix) \
-	-XGTK_PREFIX=${prefix}
+	--build-var=GTKADA_BUILD,LIBRARY_TYPE --install-name=gtkada \
+	--prefix=${DESTDIR}$(prefix) -XGTK_PREFIX=${prefix}
 
 GETTEXT_INTL=@GETTEXT_INTL@
 HAVE_GETTEXT=@HAVE_GETTEXT@
