Add testgtk/task_project/obj in .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ docs/gtkada_ug/gtkada_ug.html
 docs/gtkada_ug/gtkada_ug.info
 docs/gtkada_ug/gtkada_ug.ps
 docs/gtkada_ug/gtkada_ug.txt
+testgtk/task_project/obj
