UA28-020 Replace deprecated autoconf macros.
Change-Id: I459930a62d5aa3f92de55634ac97e506db9ed7ff

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_INIT(gtkada,18.0w,report@adacore.com,gtkada)
-AC_CANONICAL_SYSTEM
+AC_CANONICAL_TARGET
 
 TARGET=""
 if test x$host != x$target ; then
