V420-039: Fix testgtk warning because of loaders.cache
loaders.cache is relocatable by default thus it will fail to load
for testgtk => add a symbolic link to fix the warning.
In case the user encounter the same issue, he can either:
- move the gtk install relative to the executable
- do a similar symbolic link
- run "gdk-pixbuf-query-loaders-absolute --uptadte-cache"

Change-Id: I54abb7df6eb534ca2fa92ebcd67648ff9bf9aa45

--- a/Makefile.in
+++ b/Makefile.in
@@ -108,7 +108,9 @@ install: install-clean
 	cd testgtk; ${GPRINSTALL_FULL} -XLIBRARY_TYPE=$(LIBRARY_TYPE_FOR_TOOLS) \
 		--mode=usage --exec-subdir=${DESTDIR}${exampledir} \
 		-Ptestgtk.gpr -aP ../src
-
+ifneq ($(OS),Windows_NT)
+	ln -s ${libdir} ${DESTDIR}${datadir}/examples/gtkada
+endif
 	@echo '-----------------------------------------------------------------------'
 	@echo '--  GtkAda has now been installed.                                   --'
 	@echo '--  To use the library, you may need to update LD_LIBRARY_PATH       --'
