Changed symlink logic to be POSIX-compatible
* Fix for #55
* --force argument introduced by 6b3f6f007835831a913de9e8a9eb1bcf3d10540c
* argument absent in MacOS ln version [1].

[1] https://man.freebsd.org/cgi/man.cgi?query=ln&apropos=0&sektion=0&manpath=macOS+14.3.1&arch=default&format=html

--- a/Makefile.in
+++ b/Makefile.in
@@ -109,7 +109,9 @@ install: install-clean
 		--mode=usage --exec-subdir=${DESTDIR}${exampledir} \
 		-Ptestgtk.gpr -aP ../src
 ifneq ($(OS),Windows_NT)
-	ln -s ${libdir} ${DESTDIR}${datadir}/examples/gtkada --force
+	if ! ln -s ${libdir} ${DESTDIR}${datadir}/examples/gtkada 2>/dev/null; \
+	then unlink ${DESTDIR}${datadir}/examples/gtkada; \
+	ln -s ${libdir} ${DESTDIR}${datadir}/examples/gtkada 2>/dev/null; fi
 endif
 	@echo '-----------------------------------------------------------------------'
 	@echo '--  GtkAda has now been installed.                                   --'
